# bl-bot

./: .gitignore  Cargo.toml  README.md  Secrets.example.toml  config.example.toml
.deploy/: deploy.sh
.github/workflows/: release.yml  test.yml
src/: config.rs  log.rs  main.rs  persist.rs
src/beatleader/: clan.rs  error.rs  mod.rs  oauth.rs  player.rs  pp.rs  rating.rs
src/bot/: beatleader.rs  db.rs  mod.rs
src/bot/commands/: auto_role_add.rs  auto_role_remove.rs  auto_role_show.rs  backup.rs  clan.rs  guild.rs  link.rs  mod.rs  player.rs  register.rs  replay.rs  role.rs  settings.rs  unlink.rs
src/config/: mod.rs
src/discord/: mod.rs
src/discord/bot/: beatleader.rs  mod.rs
src/discord/bot/beatleader/: clan.rs  mod.rs  player.rs  score.rs
src/discord/bot/commands/: backup.rs  clan.rs  guild.rs  mod.rs  player.rs  playlist.rs  register.rs
src/discord/worker/: clan_contribution.rs  clan_peak.rs  clan_wars.rs  mod.rs  oauth.rs  player_stats.rs  user_roles.rs
src/embed/: blur.rs  font.rs  map_triangle.rs  mod.rs  triangle.rs  utils.rs
src/other/: commander_orders.rs  mod.rs  ram_reporter.rs
src/storage/: bsmaps.rs  clan_peak.rs  guild.rs  mod.rs  persist.rs  player.rs  player_oauth_token.rs  player_scores.rs  playlist.rs  settings.rs
src/webserver/: mod.rs
src/webserver/routes/: api.rs  fallback.rs  mod.rs  web.rs
static/: 404.html  index.html
