[package]
name = "bl-bot"
version = "0.14.2"
description = "Beat Leader Discord Bot"
readme = "README.md"
repository = "https://github.com/motzel/bl-bot"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.22", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.108"
tokio = { version = "^1.34.0", features = ["full"] }
poise = { version = "^0.5.7", features = ["cache"] }
futures = "^0.3.29"
lazy_static = "^1.4.0"
peak_alloc = "^0.2.0"
governor = "^0.6.0"
serde_with = {version = "^3.4.0", features = ["chrono"]}
regex = "^1.10.2"
chrono = {version = "^0.4.31", features = ["serde"] }
serde_repr = "^0.1.17"
ril = { version = "^0.10.1", features = ["all"] }
stackblur-iter = "^0.2.0"
bytes = "^1.5.0"
relativetime = {version = "^0.1.4", features = ["chrono"] }
thiserror = { version = "1.0.50", features = [] }
async-trait = "^0.1.74"
ttf-parser = "^0.20.0"
rayon = "^1.8.0"
config = { version = "^0.13.3", features = ["toml"], default-features = false }
tokio-util = { version = "0.7.10", features = ["full"] }
http-cache-reqwest = { version = "^0.12.0", features = ["manager-cacache"] }
cacache = { version = "^12.0.0", default-features = false, features = ["tokio-runtime", "mmap"] }
reqwest-middleware = "^0.2.4"
colorgrad = "^0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-futures = { version = "0.2.5", features = ["tokio"] }
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
axum = { version = "^0.7", features = ["http2", "macros", "multipart", "tracing", "ws"] }
tower-http = { version = "^0.5", features = ["fs", "trace", "timeout"] }
hostname = "0.3.1"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
cookie = "0.18.0"
tower_governor = { version = "0.3.2", features = ["axum", "tracing"] }
magic-crypt = "^3.1"
mime = "0.3.17"
