[package]
name = "bl-bot"
version = "0.20.3"
description = "Beat Leader Discord Bot"
readme = "README.md"
repository = "https://github.com/motzel/bl-bot"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.12.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.108"
tokio = { version = "^1.34.0", features = ["full"] }
poise = { version = "^0.6.1", features = ["cache"] }
futures = "^0.3.29"
lazy_static = "^1.4.0"
peak_alloc = "^0.2.0"
governor = "^0.8.0"
serde_with = { version = "^3.4.0", features = ["chrono"] }
regex = "^1.10.2"
chrono = { version = "^0.4.31", features = ["serde"] }
serde_repr = "^0.1.17"
ril = { version = "^0.10.3", features = ["all"] }
stackblur-iter = "^0.2.0"
bytes = "^1.5.0"
relativetime = { version = "^0.1.4", features = ["chrono"] }
thiserror = { version = "^2.0.9", features = [] }
async-trait = "^0.1.74"
ttf-parser = "^0.25.1"
rayon = "^1.8.0"
config = { version = "^0.15.4", features = ["toml"], default-features = false }
tokio-util = { version = "^0.7.10", features = ["full"] }
http-cache-reqwest = { version = "^0.15.0", features = ["manager-cacache"] }
cacache = { version = "^13.0.0", default-features = false, features = ["tokio-runtime", "mmap"] }
reqwest-middleware = "^0.4.0"
colorgrad = "^0.6.2"
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
axum = { version = "^0.7", features = ["http2", "macros", "multipart", "tracing", "ws"] }
tower-http = { version = "^0.6.2", features = ["fs", "trace", "timeout"] }
hostname = "^0.4.0"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
cookie = "0.18.0"
tower_governor = { version = "^0.5.0", features = ["axum", "tracing"] }
magic-crypt = "^4.0.1"
mime = "0.3.17"
cli-table = { version = "0.4.7", default-features = false, features = ["derive", "cli-table-derive", "title"] }
